api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: team-gemini
    app.kubernetes.io/instance: team-gemini
    app.kubernetes.io/name: team-gemini
  name: team-gemini
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: team-gemini
    app.kubernetes.io/name: team-gemini
  sessionAffinity: None
  type: ClusterIP
