api/k8s/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    enzo: "true"
  labels:
    app: team-gemini
    app.kubernetes.io/instance: team-gemini
    app.kubernetes.io/name: team-gemini
  name: team-gemini
  namespace: team-gemini
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: team-gemini
    app.kubernetes.io/name: team-gemini
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-japan-cohort/team-gemini.git
    enzo: "true"
  labels:
    app: team-gemini
    app.kubernetes.io/instance: team-gemini
    app.kubernetes.io/name: team-gemini
    app.openshift.io/runtime: js
  name: team-gemini
  namespace: team-gemini
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: team-gemini
      app.kubernetes.io/name: team-gemini
  template:
    metadata:
      annotations:
        enzo: "true"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: team-gemini
        app.kubernetes.io/name: team-gemini
    spec:
      containers:
      - env:
        - name: INGRESS_HOST
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        image: quay.io/satoshi_koibuchi_ibm/gemini-backend
        imagePullPolicy: IfNotPresent
        # livenessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: 3000
        #     scheme: HTTP
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 1
        name: team-gemini-backend
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          # failureThreshold: 3
          # httpGet:
          #   path: /
          #   port: http
          #   scheme: HTTP
          # periodSeconds: 10
          # successThreshold: 1
          # timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    enzo: "true"
    openshift.io/host.generated: "true"
  name: akpfs
  namespace: team-gemini
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: team-gemini
    weight: 100
  wildcardPolicy: None
